--- a/LiteHelper/LiteHelper.csproj
+++ b/LiteHelper/LiteHelper.csproj
@@ -34,11 +34,11 @@
 		<WarningLevel>4</WarningLevel>
 	</PropertyGroup>
 	<ItemGroup>
-		<None Include=".\icon.png" Pack="true" PackagePath="" />
+		<None Include="..\icon.png" Pack="true" PackagePath="" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="stylecop.json" />
-		<AdditionalFiles Include=".\stylecop.json">
+		<AdditionalFiles Include="..\stylecop.json">
 			<Link>stylecop.json</Link>
 		</AdditionalFiles>
 	</ItemGroup>
